# freerfb

./: .gitignore  CMakeLists.txt  main.c
common/: common.h  inbuf.c
connection/: tcp_connection.c  tcp_connection.h
include/: CMakeLists.txt  auth.h  common.h  inbuf.h  init.h  protover.h  tcp_connection.h  utils.h
rfb/: auth.c  auth.h  init.c  protover.c
tests/: CMakeLists.txt  demo-server.c  simple-client.c  simple-server.c
utils/: utils.c  utils.h
